MDEV-13935 INSERT stuck at state Unlocking tables

lock_reset_lock_and_trx_wait(): Restore a debug assertion.